--- a/JumpPointSearch/AStarAlgorithm/AStarAlgorithm.vcxproj
+++ b/JumpPointSearch/AStarAlgorithm/AStarAlgorithm.vcxproj
@@ -148,6 +148,7 @@
   <ItemGroup>
     <ClInclude Include="AStarAlgorithm.h" />
     <ClInclude Include="JPS.h" />
+    <ClInclude Include="JumpPointSearch.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
@@ -155,6 +156,7 @@
   <ItemGroup>
     <ClCompile Include="AStarAlgorithm.cpp" />
     <ClCompile Include="JPS.cpp" />
+    <ClCompile Include="JumpPointSearch.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
